# intrusion-log-analysis

./: .gitignore  .jupytext.toml  README.md  app.py  pyproject.toml  pyrightconfig.json  requirements.txt
notebooks/: 01_rules.ipynb  01_rules.py  01_rules_exploration.ipynb  02_alerts.ipynb  02_alerts.py  03_visualization.ipynb  03_visualization.py
outputs/: alerts_priority.csv  cumulative_coverage.csv  incremental_coverage.csv  incremental_detail.csv  priority.txt  reasons_summary.csv  rule_metrics.csv
src/: 01_rules_exploration.py
src/intrusion/: __init__.py  data.py  evaluation.py  paths.py  plots.py  rules.py  theme.py
src/intrusion.egg-info/: PKG-INFO  SOURCES.txt
